--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -19,44 +19,26 @@ init: false
 map:
   - type: data
     read_only: false
-    path: /data/trilium-data  # This needs to point to /data, where you have your persistent storage
+    path: /data/trilium-data
+  - type: config
+    read_only: false
+    path: /config
 ports:
   "8080/tcp": 8080
 options:
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
-  trilium_oauth_issuer_name: "Authentik"
-  trilium_oauth_base_url: "https://notepad2.jeak0b.duckdns.org"
-  trilium_oauth_issuer_base: "https://auth.jeakob.giize.com/application/o/trill-rpi/"
-  trilium_oauth_client_id: ""
-  trilium_oauth_client_secret: ""
 schema:
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
-  trilium_oauth_issuer_name: str
-  trilium_oauth_base_url: str
-  trilium_oauth_issuer_base: str
-  trilium_oauth_client_id: str
-  trilium_oauth_client_secret: str
 environment:
-  TRILIUM_DATA_DIR: "/data/trilium-data"  # Use /data for persistent data storage
-  USER_UID: "1000"
-  USER_GID: "1000"
-  TMPDIR: "/data/tmp"  # Use /data/tmp for temporary storage
-  TEMP: "/data/tmp"  # Same as TMPDIR
+  # Minimal environment variables
+  TRILIUM_DATA_DIR: "/data/trilium-data"
   TZ: "{{ options.timezone }}"
   NODE_ENV: "production"
   HOST: "0.0.0.0"
-  TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
-  TRILIUM_OAUTH_BASE_URL: "{{ options.trilium_oauth_base_url }}"
-  TRILIUM_OAUTH_CLIENT_ID: "{{ options.trilium_oauth_client_id }}"
-  TRILIUM_OAUTH_CLIENT_SECRET: "{{ options.trilium_oauth_client_secret }}"
-  TRILIUM_OAUTH_ISSUER_NAME: "{{ options.trilium_oauth_issuer_name }}"
-  TRILIUM_OAUTH_ISSUER_ICON: "{{ options.trilium_oauth_issuer_icon }}"
-  TRILIUM_OAUTH_ISSUER_BASE_URL: "{{ options.trilium_oauth_issuer_base }}"
-
-# You can also set up through environment variables:
-# TRILIUM_OAUTH_BASE_URL, TRILIUM_OAUTH
+  # Let Trilium use its default configuration
+  TRILIUM_CONFIG_FILE: "/config/trilium-config.json"
